<resources>
    <string name="app_name">Permissions App Tarea</string>
    <string name="storage">Storage</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="phone">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">CANCEL</string>
    <string name="continuar">CONTINUE</string>
    <string name="storageTxt">access photos, media, and files on your device</string>
    <string name="locationTxt">access this device\'s location</string>
    <string name="cameraTxt">take pictures and record video</string>
    <string name="phoneTxt">make and manage phone calls</string>
    <string name="contactsTxt">access your contacts</string>
</resources>