<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView-->
<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">
    <Switch
            android:text="@string/storage"
            android:layout_width="0dp"
            android:layout_height="25dp" android:id="@+id/storageSwitch"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp"/>
    <Switch
            android:text="@string/camera"
            android:layout_width="0dp"
            android:layout_height="26dp" android:id="@+id/cameraSwitch"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"/>
    <Switch
            android:text="@string/phone"
            android:layout_width="0dp"
            android:layout_height="26dp" android:id="@+id/phoneSwitch"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"/>
    <Switch
            android:text="@string/contacts"
            android:layout_width="0dp"
            android:layout_height="26dp" android:id="@+id/contactSwitch"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/storageTxtView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp"/>
    <Switch
            android:text="@string/location"
            android:layout_width="0dp"
            android:layout_height="26dp" android:id="@+id/locationSwitch"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"/>
    <TextView
            android:text="@string/continuar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/continueTxtView"
            android:layout_marginEnd="24dp"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/cancelTxtView"
            android:layout_marginEnd="32dp"
            android:textColor="@color/secondary"
            android:onClick="killApp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toStartOf="@+id/continueTxtView"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/storageTxt"
            android:layout_width="0dp"
            android:textColor="@color/text"
            android:layout_height="50dp" android:id="@+id/textView3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/storageSwitch" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"/>
    <TextView
            android:text="@string/locationTxt"
            android:layout_width="0dp"
            android:textColor="@color/text"
            android:layout_height="50dp" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/locationSwitch"/>
    <TextView
            android:text="@string/cameraTxt"
            android:layout_width="0dp"
            android:textColor="@color/text"
            android:layout_height="50dp" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cameraSwitch"/>
    <TextView
            android:text="@string/phoneTxt"
            android:layout_width="0dp"
            android:textColor="@color/text"
            android:layout_height="50dp" android:id="@+id/storageTxtView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/phoneSwitch"/>
    <TextView
            android:text="@string/contactsTxt"
            android:layout_width="0dp"
            android:textColor="@color/text"
            android:layout_height="50dp" android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/contactSwitch"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<!--</ScrollView>-->