<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".PermissionsActivity">
    <TextView
            android:text="@string/contacts"
            android:onClick="openContacts"
            android:layout_width="0dp"
            android:textColor="@color/secondary"
            android:layout_height="40dp" android:id="@+id/contactTxtView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneTxtView"/>
    <TextView
            android:text="@string/phone"
            android:onClick="openPhone"
            android:layout_width="0dp"
            android:textColor="@color/secondary"
            android:layout_height="40dp" android:id="@+id/phoneTxtView"
            android:layout_marginTop="40dp" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/cameraTxtView"/>
    <TextView
            android:text="@string/camera"
            android:onClick="openCamera"
            android:layout_width="0dp"
            android:textColor="@color/secondary"
            android:layout_height="40dp" android:id="@+id/cameraTxtView"
            android:layout_marginTop="40dp" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/locationTxtView"/>
    <TextView
            android:text="@string/storage"
            android:onClick="openStorage"
            android:layout_width="0dp"
            android:textColor="@color/secondary"
            android:layout_height="40dp" android:id="@+id/storageTxtView"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"/>
    <TextView
            android:text="@string/location"
            android:onClick="openLocation"
            android:layout_width="0dp"
            android:textColor="@color/secondary"
            android:layout_height="40dp" android:id="@+id/locationTxtView"
            android:layout_marginTop="40dp" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="150dp" android:layout_marginEnd="150dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/storageTxtView"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>